--- a/DETHICK/WEB_CK_1988216/css/1988216.css
+++ b/DETHICK/WEB_CK_1988216/css/1988216.css
@@ -5,7 +5,7 @@ html, body {
     overflow-x: hidden;
 }
 .container {
-    background: url("/img/bg.jpg") repeat-y;
+    background: url("../img/bg.jpg") repeat-y;
 }
 
 /* Header */
@@ -66,7 +66,7 @@ html, body {
 }
 
 .content_1 {
-    background: url("/img/about.jpg") no-repeat;
+    background: url("../img/about.jpg") no-repeat;
     height: 400px;
     width: 50%;
     margin: 50px auto 250px auto;
@@ -160,9 +160,9 @@ html, body {
 
 #menu .item-container {
     position: relative;
-    width: 500px;
-    height: 400px;
-    margin: 150px auto;
+    width: 450px;
+    height: 350px;
+    margin: 150px auto 0 auto;
     box-sizing: border-box;
 }
 
